Homework 11: implement tasks 3 & 4

--- a/HW11/HW11.ipynb
+++ b/HW11/HW11.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "36d337ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "58023319",
    "metadata": {},
@@ -71,7 +81,21 @@
     "\n",
     "</br>\n",
     "\n",
-    "3. Довести: $f_{min}(\\alpha)$ - є мінімальним многочленом елементів $\\alpha^q, ..., \\alpha^{q^{m-1}}$"
+    "3. Довести: $f_{min}(\\alpha)$ - є мінімальним многочленом елементів $\\alpha^q, ..., \\alpha^{q^{m-1}}$\n",
+    "    \n",
+    "    Нехай $\\alpha \\mathbb{F}_q$ - ідеал факторгрупи $\\mathbb{F}_{q^m}$.\n",
+    "    \n",
+    "    Тоді $\\alpha^{q-1} \\equiv 1\\space (mod \\space q)$, якщо q є степенем простого числа.\n",
+    "    \n",
+    "    $\\Leftrightarrow \\space \\alpha^{q} \\equiv \\alpha \\space (mod \\space q) \\Leftrightarrow \\alpha \\space i\\space \\alpha^{q}$ належать до одного ідеалу (є еквівалентними елементами).\n",
+    "    \n",
+    "    Оскільки $f_{min}(\\alpha)$ є мінімальним многочленом $\\alpha$, він також є мінімальним многочленом усіх елементів еквівалентних $\\alpha$, тобто елементам ідеалу $\\alpha \\mathbb{F}_q \\supset \\{\\alpha, \\alpha^{q}\\}$\n",
+    "    \n",
+    "    За ММІ, $\\alpha^q \\in \\alpha \\mathbb{F}_q \\Rightarrow \\alpha^{q^k} \\in \\alpha \\mathbb{F}_q, k=\\overline{0,m-1}$\n",
+    "    \n",
+    "    $ \\Rightarrow \\mathbb{F}_q \\supset \\{\\alpha, \\alpha^{q}, ..., \\alpha^{q^{m-1}}\\}$ \n",
+    "    \n",
+    "    Отже, для кожного елемента $\\{\\alpha, \\alpha^{q}, ..., \\alpha^{q^{m-1}}\\},\\space f_{min}(\\alpha)$ є мінімальним многочленом, що потрібно було довести"
    ]
   },
   {
@@ -89,16 +113,67 @@
    "source": [
     "Нехай код $C$ виправляє 3 помилки. Тоді $[\\frac{d^*}{2}] = 3 \\Rightarrow d^* \\in {6,7}$.\n",
     "\n",
-    "Нехай $G_{12,4}$ - породжуюча матриця коду $C$ і $H = H_{12,8}$ - перевірочна матриця. Тоді $n>=6$ - мінімальна кількість лінійно залежних стовпців матриці $H \\Rightarrow $ \n",
+    "Нехай $G_{12,4}$ - породжуюча матриця коду $C$ і $H = H_{12,8}$ - перевірочна матриця. Тоді $n>=6$ - мінімальна кількість лінійно залежних стовпців матриці $H \\Rightarrow $ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d522bd22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H = \n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{array}{cccccccccccc}1 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0\\\\0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0\\\\0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\\\0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\\\0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 1 & 0\\\\0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 1\\\\1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12\\\\7 & 8 & 9 & 10 & 11 & 12 & 1 & 2 & 3 & 4 & 5 & 6\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[1, 0, 0,  0,  0,  0, 1, 0, 0,  0,  0,  0],\n",
+       "[0, 1, 0,  0,  0,  0, 0, 1, 0,  0,  0,  0],\n",
+       "[0, 0, 1,  0,  0,  0, 0, 0, 1,  0,  0,  0],\n",
+       "[0, 0, 0,  1,  0,  0, 0, 0, 0,  1,  0,  0],\n",
+       "[0, 0, 0,  0,  1,  0, 0, 0, 0,  0,  1,  0],\n",
+       "[0, 0, 0,  0,  0,  1, 0, 0, 0,  0,  0,  1],\n",
+       "[1, 2, 3,  4,  5,  6, 7, 8, 9, 10, 11, 12],\n",
+       "[7, 8, 9, 10, 11, 12, 1, 2, 3,  4,  5,  6]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H = sp.Matrix([\n",
+    "    [1,0,0,0,0,0,1,0,0,0,0,0],\n",
+    "    [0,1,0,0,0,0,0,1,0,0,0,0],\n",
+    "    [0,0,1,0,0,0,0,0,1,0,0,0],\n",
+    "    [0,0,0,1,0,0,0,0,0,1,0,0],\n",
+    "    [0,0,0,0,1,0,0,0,0,0,1,0],\n",
+    "    [0,0,0,0,0,1,0,0,0,0,0,1],\n",
+    "    [1,2,3,4,5,6,7,8,9,10,11,12],\n",
+    "    [7,8,9,10,11,12,1,2,3,4,5,6]\n",
+    "])\n",
+    "print(\"H = \")\n",
+    "H"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ef97dc",
+   "metadata": {},
+   "source": [
+    "Довільні 5 стовпців матриці $H$ є лінійно незалежними, тому мінімальна кодова відстань: \n",
     "\n",
-    "$H = \n",
-    "\\begin{bmatrix}\n",
-    "    x_{11} & x_{12} & x_{13} & \\dots  & x_{1n} \\\\\n",
-    "    x_{21} & x_{22} & x_{23} & \\dots  & x_{2n} \\\\\n",
-    "    \\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "    x_{d1} & x_{d2} & x_{d3} & \\dots  & x_{dn}\n",
-    "\\end{bmatrix}\n",
-    "$"
+    "$d^* = 6$, отже, код виправляє $\\leq 3 $ помилки."
    ]
   },
   {
@@ -111,17 +186,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad540f34",
+   "metadata": {},
+   "source": [
+    "Циклічний тернарний код $C \\subset V_4: \\forall v \\in V_4: v_i \\in \\mathbb{F}_3, i=\\overline{1,4}$\n",
+    "\n",
+    "$g(x) = x^2 + 2$ - породжуючий многочлен коду $C$\n",
+    "\n",
+    "$x^2 + 2 \\leftrightarrow 0102 \\in V_4$\n",
+    "\n",
+    "Породжуюча матриця: G = $\n",
+    "\\begin{bmatrix}\n",
+    "    1 & 0 & 2 & 0\\\\\n",
+    "    0 & 1 & 0 & 2\\\\    \n",
+    "\\end{bmatrix}\n",
+    "$\n",
+    "\n",
+    "Перевірочна матриця коду $C$: \n",
+    "\n",
+    "   A = $\n",
+    "\\begin{bmatrix}\n",
+    "    2 & 0\\\\\n",
+    "    0 & 2\\\\    \n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "H = $-A^T \\space|\\space I$\n",
+    "    \n",
+    "H = $\n",
+    "\\begin{bmatrix}\n",
+    "    1 & 0 & 1 & 0\\\\\n",
+    "    0 & 1 & 0 & 1\\\\    \n",
+    "\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ce5609d",
    "metadata": {},
    "source": [
     "![](images/5.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca42916f",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
