--- a/HW11/HW11.ipynb
+++ b/HW11/HW11.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "36d337ed",
+   "id": "87b450d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "\n",
     "3. Довести: $f_{min}(\\alpha)$ - є мінімальним многочленом елементів $\\alpha^q, ..., \\alpha^{q^{m-1}}$\n",
     "    \n",
-    "    Нехай $\\alpha \\mathbb{F}_q$ - ідеал факторгрупи $\\mathbb{F}_{q^m}$.\n",
+    "    Нехай $\\alpha \\mathbb{F}_q$ - ідеал факторгрупи $\\mathbb{F}_{q}/\\mathbb{F}_{q^m}$.\n",
     "    \n",
     "    Тоді $\\alpha^{q-1} \\equiv 1\\space (mod \\space q)$, якщо q є степенем простого числа.\n",
     "    \n",
@@ -93,7 +93,7 @@
     "    \n",
     "    За ММІ, $\\alpha^q \\in \\alpha \\mathbb{F}_q \\Rightarrow \\alpha^{q^k} \\in \\alpha \\mathbb{F}_q, k=\\overline{0,m-1}$\n",
     "    \n",
-    "    $ \\Rightarrow \\mathbb{F}_q \\supset \\{\\alpha, \\alpha^{q}, ..., \\alpha^{q^{m-1}}\\}$ \n",
+    "    $ \\Rightarrow \\alpha \\mathbb{F}_q \\supset \\{\\alpha, \\alpha^{q}, ..., \\alpha^{q^{m-1}}\\}$ \n",
     "    \n",
     "    Отже, для кожного елемента $\\{\\alpha, \\alpha^{q}, ..., \\alpha^{q^{m-1}}\\},\\space f_{min}(\\alpha)$ є мінімальним многочленом, що потрібно було довести"
    ]
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d522bd22",
+   "id": "883799cd",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ef97dc",
+   "id": "6bd7fbcb",
    "metadata": {},
    "source": [
     "Довільні 5 стовпців матриці $H$ є лінійно незалежними, тому мінімальна кодова відстань: \n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad540f34",
+   "id": "5dfdffed",
    "metadata": {},
    "source": [
     "Циклічний тернарний код $C \\subset V_4: \\forall v \\in V_4: v_i \\in \\mathbb{F}_3, i=\\overline{1,4}$\n",
